updates from another book

--- a/ghostty/config
+++ b/ghostty/config
@@ -32,4 +32,6 @@ keybind = super+b>k=new_split:up
 keybind = super+b>l=new_split:right
 
 keybind = super+r=reload_config
+keybind = super+t=new_tab
+keybind = super+w=close_tab
 
